--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Временная репа, для проверки интеграции с github actions",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test1": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx jest"
   },
   "author": "",
   "license": "ISC",
